--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+.classpath
+.gradle
+.idea
+.project
+.settings
+*.ipr
+*.iml
+*.iws
+bin
+build
+out
+target
